# rust-zero2production

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
.github/workflows/: general.yml
api/: health_check.http  http-client.env.json  new_subscriber.http
configuration/: base.yaml  production.yaml
migrations/: 20250202073201_create_subscription_tokens_table.sql
notes/: .marksman.toml  1 Начало.md  2 Создание рассылки по электронной почте.md  3 Регистрация нового подписчика.md
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
