[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
config = "0.15.6"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"
log = "0.4.25"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["rt", "macros"] }
once_cell = "1.20.2"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.2"
